src/mongo/db/index_builds_coordinator.h
@@ -342,6 +342,11 @@ public:
                                    const CommitQuorumOptions& newCommitQuorum) = 0;
 
     /**
+     * Returns true if there are no index builds in progress.
+     */
+    bool noIndexBuildInProgress() const;
+
+    /**
      * Returns the number of index builds that are running on the specified database.
      */
     int numInProgForDb(StringData db) const;
